--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.6",
     "bootstrap": "^3.4.1",
     "express": "^4.18.2",
+    "pinia": "^2.0.30",
     "vue": "^3.2.45",
     "vue-axios-cors": "^1.0.1",
     "vue-router": "^4.1.6"
