--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "pinia": "^2.0.30",
     "vue": "^3.2.45",
     "vue-axios-cors": "^1.0.1",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
