--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.2.6",
     "bootstrap": "^3.4.1",
+    "bootstrap-icons": "^1.10.3",
     "express": "^4.18.2",
     "pinia": "^2.0.30",
     "vue": "^3.2.45",
